add job to portfolio

--- a/index.html
+++ b/index.html
@@ -198,54 +198,38 @@
                 </div>
               </article>
             </li>
-            <li class="portfolio__item category-1">
-              <article class="portfolio-card">
-                <figure class="portfolio-card__head">
-                  <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/portfolio/">
-                    <img class="portfolio-card__img" src="images/portfolio/1.jpg" alt="first job">
-                  </a>
-                </figure>
-                <div class="portfolio-card__name">
-                  <a class="portfolio-card__link-text" target="_blank"
-                    href="https://ivanprosyanik.github.io/portfolio/">
-                    Portfolio for Serhiy Sirko
-                  </a>
-                </div>
-              </article>
-            </li>
-            <li class="portfolio__item category-1">
-              <article class="portfolio-card">
-                <figure class="portfolio-card__head">
-                  <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/portfolio/">
-                    <img class="portfolio-card__img" src="images/portfolio/1.jpg" alt="first job">
-                  </a>
-                </figure>
-                <div class="portfolio-card__name">
-                  <a class="portfolio-card__link-text" target="_blank"
-                    href="https://ivanprosyanik.github.io/portfolio/">
-                    Portfolio for Serhiy Sirko
-                  </a>
-                </div>
-              </article>
-            </li>
-            <li class="portfolio__item category-2">
-              <article class="portfolio-card">
-                <figure class="portfolio-card__head">
-                  <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/portfolio/">
-                    <img class="portfolio-card__img" src="images/portfolio/1.jpg" alt="first job">
-                  </a>
-                </figure>
-                <div class="portfolio-card__name">
-                  <a class="portfolio-card__link-text" target="_blank"
-                    href="https://ivanprosyanik.github.io/portfolio/">
-                    Portfolio for Serhiy Sirko
-                  </a>
-                </div>
-              </article>
-            </li>
             <li class="portfolio__item category-3">
               <article class="portfolio-card">
                 <figure class="portfolio-card__head">
+                  <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/HatiMaki/dist/">
+                    <img class="portfolio-card__img" src="images/portfolio/2.jpg" alt="first job">
+                  </a>
+                </figure>
+                <div class="portfolio-card__name">
+                  <a class="portfolio-card__link-text" target="_blank" href="https://ivanprosyanik.github.io/HatiMaki/dist/">
+                    HatiMaki Sushi Bar
+                  </a>
+                </div>
+              </article>
+            </li>
+            <!-- <li class="portfolio__item category-1">
+              <article class="portfolio-card">
+                <figure class="portfolio-card__head">
+                  <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/portfolio/">
+                    <img class="portfolio-card__img" src="images/portfolio/1.jpg" alt="first job">
+                  </a>
+                </figure>
+                <div class="portfolio-card__name">
+                  <a class="portfolio-card__link-text" target="_blank"
+                    href="https://ivanprosyanik.github.io/portfolio/">
+                    Portfolio for Serhiy Sirko
+                  </a>
+                </div>
+              </article>
+            </li>
+            <li class="portfolio__item category-1">
+              <article class="portfolio-card">
+                <figure class="portfolio-card__head">
                   <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/portfolio/">
                     <img class="portfolio-card__img" src="images/portfolio/1.jpg" alt="first job">
                   </a>
@@ -273,6 +257,22 @@
                 </div>
               </article>
             </li>
+            
+            <li class="portfolio__item category-2">
+              <article class="portfolio-card">
+                <figure class="portfolio-card__head">
+                  <a class="portfolio-card__link" target="_blank" href="https://ivanprosyanik.github.io/portfolio/">
+                    <img class="portfolio-card__img" src="images/portfolio/1.jpg" alt="first job">
+                  </a>
+                </figure>
+                <div class="portfolio-card__name">
+                  <a class="portfolio-card__link-text" target="_blank"
+                    href="https://ivanprosyanik.github.io/portfolio/">
+                    Portfolio for Serhiy Sirko
+                  </a>
+                </div>
+              </article>
+            </li> -->
           </ul>
         </div>
       </section>
